[PPANTT-190] feat: Updated controller and tests
